[gd_scene load_steps=5 format=3 uid="uid://de7pkpeimdmvg"]

[ext_resource type="Script" uid="uid://d3g1ncg3dhrc0" path="res://scripts/main_menu.gd" id="1_3ji5i"]
[ext_resource type="Texture2D" uid="uid://c1sn0aiifhvgd" path="res://ui/BackgroundMain.png" id="2_5xyyo"]
[ext_resource type="Texture2D" uid="uid://d2we2nurhi5cw" path="res://ui/Title.png" id="3_4b8gk"]

[sub_resource type="Theme" id="Theme_qjgbi"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("VBoxContainer/Start")
focus_previous = NodePath("VBoxContainer/Settings")
script = ExtResource("1_3ji5i")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5xyyo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -27.5
offset_right = 53.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_qjgbi")

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "START GAME"

[node name="Intro" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "LEARN TO PLAY"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "SETTINGS"

[node name="EndlessMode" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "ENDLESS
"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.045
anchor_top = 1.0
anchor_right = 0.045
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 92.0
grow_vertical = 0
text = "Quit Game"

[node name="TextureRect2" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.0
offset_top = -274.0
offset_right = 82.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.4, 1.4)
texture = ExtResource("3_4b8gk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
color = Color(0.0784314, 0.501961, 0.494118, 1)

[node name="Highscore" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Best Score: 
"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Intro" to="." method="_on_intro_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/EndlessMode" to="." method="_on_endless_mode_pressed"]
[connection signal="pressed" from="VBoxContainer/EndlessMode" to="." method="_on_settings_pressed"]
[connection signal="focus_entered" from="Quit" to="." method="_on_quit_focus_entered"]
[connection signal="focus_exited" from="Quit" to="." method="_on_quit_focus_exited"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
